# rt

./: AGENTS.md  CONTINUOUS_IMPROVEMENT_PLAN.md  Cargo.toml  IMPROVEMENT_BACKLOG.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_TARGETS.md  PRD.md  README.md  USER_STORY.md  WORKTREE_GUIDE.md  WORKTREE_SETUP_SUMMARY.md  research.md  worktree-manager.sh
.github/workflows/: ci.yml
benches/: memory_benchmarks.rs  rendering_benchmarks.rs
src/: ansi.rs  environment.rs  lib.rs  main.rs  pty.rs  renderer.rs  signals.rs  terminal.rs
src/shaders/: text.wgsl
tests/: integration_tests.rs  test_utils.rs
