[package]
name = "rt"
version = "0.1.0"
edition = "2021"
description = "A modern, fast, and enterprise-grade terminal emulator built with Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rt"
homepage = "https://rt-terminal.dev"
keywords = ["terminal", "emulator", "rust", "gpu", "performance"]
categories = ["command-line-utilities", "gui"]

[lib]
name = "rt"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
wgpu = "0.19"
winit = "0.29"
fontdue = "0.9"
image = "0.24"
rand = "0.8"
bytemuck = "1.14"
pollster = "0.3"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
approx = "0.5"
serial_test = "3.0"

[[bench]]
name = "rendering_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false
